[project]
name = "agentic-ai-nice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.3.3",
    "peas-agent-tools",
]

[tool.uv.sources]
peas-agent-tools = { git = "https://github.com/mz038197/peas-agent-tools.git" }
